Closed
Bug 915440
Opened 12 years ago
Closed 12 years ago
"ASSERTION: strange unit type in font-face src array" with relative @font-face in data: document
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: jruderman, Assigned: jtd)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files, 1 obsolete file)
###!!! ASSERTION: strange unit type in font-face src array: 'unit == eCSSUnit_Local_Font || unit == eCSSUnit_URL', file layout/style/nsFontFaceLoader.cpp, line 669
Before the patch in bug 522515, this testcase triggered that bug's assertion instead. So this could be seen as a "regression from bug 522515" or a bug that "depends on bug 522515".
| Reporter | ||
Comment 1•12 years ago
|
||
| Reporter | ||
Updated•12 years ago
|
Attachment #803345 -
Attachment is obsolete: true
| Reporter | ||
Comment 2•12 years ago
|
||
| Assignee | ||
Comment 3•12 years ago
|
||
Format hint value is included as a separate value in the src array, so need to skip over that in the null URL case.
Attachment #803509 -
Flags: review?(dbaron)
| Assignee | ||
Comment 4•12 years ago
|
||
dbaron, review ping
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → jdaggett
Comment on attachment 803509 [details] [diff] [review]
patch, move null URL fix to after format hint processing
r=dbaron; sorry for the delay
Attachment #803509 -
Flags: review?(dbaron) → review+
Comment 6•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/cbc16502b686
https://hg.mozilla.org/mozilla-central/rev/b8216ac55094
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in
before you can comment on or make changes to this bug.
Description
•