Bug 915440 - move null URL fix to after format hint is processed. r=dbaron